--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "tinywan/validate",
+  "name": "gitfei1231/validate",
   "description": "validate for webman plugin",
   "keywords": ["validate", "webman", "plugin"],
   "type": "library",
